syntax = "proto3";

option csharp_namespace = "GrpcClient";

package notification;

service Notify {
	rpc SendNotification(NotificationMessage) returns (NotificationResponse);
}

message NotificationMessage{
	string title = 1;
	string text = 2;
	string senderName=4;
	string chatId = 5;
}

message NotificationResponse{
	bool isSuccess= 1;
}
